eerste update van Rene: - gitignore toevoeging: .idea - mappenstructuur front-end - eerste deel front-end o index pagina o js o css

--- a/web/index.html
+++ b/web/index.html
@@ -9,24 +9,83 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Noorderzon 2018</title>
   <link rel="icon" href="images/icon.png" type="image/x-icon">
+  <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="css/animate.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <script src="js/jquery-3.3.1.min.js"></script>
+  <script src="bootstrap/js/bootstrap.min.js"></script>
   <script src="js/functions.js"></script>
 
 </head>
 
 <body>
-  <div class="start background">
-    <img src="images/nz-logo-grey.png" id="logo-front">
-    <div class="start overlay">
-        <div class="start-button-area">
-        	<button class="start-button js--triggerAnimation">click here</button>
-          <p>or scroll down</p>
-          <img src="images/arrow-down.png" >
-      </div>
+<!--div class="start background">
+  <img src="images/nz-logo-grey.png" id="logo-front">
+  <div class="start overlay">
+    <div class="start-button-area">
+      <button class="start-button js--triggerAnimation">click here</button>
+      <p>or scroll down</p>
+      <img src="images/arrow-down.png" >
     </div>
   </div>
+</div-->
+
+
+<div class="top-bar">
+  <img src="images/logo-small.png">
+  <ul class="top-menu">
+    <li><a href="index.html">Home</a></li>
+    <li><a href="pages/line-up.html">Line-up</a></li>
+    <li><a href="pages/programma.html">Programma</a></li>
+    <li><a href="pages/contact.html">Contact</a></li>
+
+  </ul>
+</div>
+<div class="navigation">
+  <div class="logo"></div>
+  <div class="navigation-flow"></div>
+</div>
+
+<div class="container">
+  <div class="row section">
+    <div class="col-lg-4"><img src="images/program-450.jpg" style="width: 600px;">
+      <p class="section-title">line-up</p></div>
+    <div class="col-lg-7 col-lg-offset-1  items line-up">
+      <ul>
+        <li><img src="images/dans-100.jpg">
+          <p>De Dans Marikes</p></li>
+        <li><img src="images/gitaat-100.jpg">
+          <p>Gitaar Gerrit</p></li>
+        <li><img src="images/theater-100.jpg">
+          <p>Tom's Thrilling Theatre</p></li>
+      </ul>
+    </div>
+
+  </div>
+  <div class="row section">
+
+    <div class="col-lg-4 "><img src="images/schedule-450.jpg" style="width: 600px;">
+      <p class="section-title">programma</p></div>
+    <div class="col-lg-5 items">
+      <ul>
+        <li>hallo</li>
+        <li>doei</li>
+      </ul>
+    </div>
+    <div class="col-lg-1 empty"></div>
+  </div>
+  <div class="row section">
+    <div class="col-lg-4 col-lg-offset-1"><img src="images/contact-450.jpg" style="width: 600px;">
+      <p class="section-title">contact</p></div>
+    <div class="col-lg-5 items">
+      <ul></ul>
+    </div>
+    <div class="col-lg-1 empty"></div>
+  </div>
+</div>
+<div class="footer">
+</div>
+
 
 </body>
 
