Vier entities-klassen gemaakt, corresponderend met de vier tabellen in van de database.

--- a/src/main/frontend/html/formulierProgrammaInvoer.html
+++ b/src/main/frontend/html/formulierProgrammaInvoer.html
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+</head>
+<body>
 <form action="" id="invoerProgramma" method="post" target="_self">
     <fieldset>
         <legend>Voer Programma onderdeel in: </legend>
@@ -7,8 +14,8 @@
             <textarea name="beschrijving"> </textarea>
         </label>
         <label>
-        Naam organisator
-        <input type="text" name="organisatorNaam" placeholder="Naam organisator" required>
+            Naam organisator
+            <input type="text" name="organisatorNaam" placeholder="Naam organisator" required>
         </label>
         <label>
             E-mail organisator
@@ -39,9 +46,9 @@
         <label>
             Gratis te bezoeken?
             <input type="radio" name="gratis" value="ja">
-        Ja <br>
+            Ja <br>
             <input type="radio" name="gratis" value="nee">
-        Nee <br>
+            Nee <br>
         </label>
         <label>Kies speeldag
             <input type="checkbox" name="speeldag1" value="slotmaandag"> Maandag <br>
@@ -51,22 +58,22 @@
             <input type="checkbox" name="speeldag5" value="slotvrijdag"> Vrijdag <br>
         </label>
         <label>
-        Kies speeltijd
-        <input type="checkbox" name="speeltijd1" value="1700"> 17:00 uur <br>
-        <input type="checkbox" name="speeltijd2" value="1800"> 18:00 uur <br>
-        <input type="checkbox" name="speeltijd3" value="1900"> 19:00 uur <br>
-        <input type="checkbox" name="speeltijd4" value="2000"> 20:00 uur <br>
+            Kies speeltijd
+            <input type="checkbox" name="speeltijd1" value="1700"> 17:00 uur <br>
+            <input type="checkbox" name="speeltijd2" value="1800"> 18:00 uur <br>
+            <input type="checkbox" name="speeltijd3" value="1900"> 19:00 uur <br>
+            <input type="checkbox" name="speeltijd4" value="2000"> 20:00 uur <br>
         </label>
         <label>
-        Voeg plaatjes toe
-        <input type="file" name="pic" accept="image/*">
+            Voeg plaatjes toe
+            <input type="file" name="pic" accept="image/*">
         </label>
         <label>
-        Voeg muziek toe
-        <input type="file" name="pic" accept="audio/*">
+            Voeg muziek toe
+            <input type="file" name="pic" accept="audio/*">
         </label>
         <button type="button" name="submit" onclick="alert('Hello World!')" formmethod="post"> Verstuur programma onderdeel </button>
     </fieldset>
 </form>
-
-
+</body>
+</html>
