--- a/src/main/frontend/html/programmaOverzicht.html
+++ b/src/main/frontend/html/programmaOverzicht.html
@@ -16,9 +16,9 @@
 <h1>Programma-overzicht</h1>
 <table>
     <tr>
-        <th>Tijd</th>
-        <th>Artiest</th>
-        <th>Locatie</th>
+        <th>Entities.Tijd</th>
+        <th>Entities.Artiest</th>
+        <th>Entities.Locatie</th>
         <th>Naam voorstelling</th>
     </tr>
     <tr>
