database mappen structuur aangepast & invoer formulier aangepast

--- a/src/main/frontend/html/formulierProgrammaInvoer.html
+++ b/src/main/frontend/html/formulierProgrammaInvoer.html
@@ -27,42 +27,22 @@
         </label>
         <label>
             Kies locatie
-            <select type="radio" name="locatie" required>
+            <select name="locatie" required>
                 <option value="volvo">Volvo</option>
-                <option value="saab">Saab</option>
-                <option value="fiat">Fiat</option>
-                <option value="audi">Audi</option>
             </select>
         </label>
         <label>
             Kies Categorie
-            <select type="radio" name="categorie" required>
+            <select name="categorie" required>
                 <option value="volvo">Volvo</option>
-                <option value="saab">Saab</option>
-                <option value="fiat">Fiat</option>
-                <option value="audi">Audi</option>
             </select>
         </label>
-        <label>
-            Gratis te bezoeken?
-            <input type="radio" name="gratis" value="ja">
-            Ja <br>
-            <input type="radio" name="gratis" value="nee">
-            Nee <br>
-        </label>
-        <label>Kies speeldag
+        <label>Kies slot
             <input type="checkbox" name="speeldag1" value="slotmaandag"> Maandag <br>
-            <input type="checkbox" name="speeldag2" value="slotdinsdag"> Dinsdag <br>
-            <input type="checkbox" name="speeldag3" value="slotwoensdag"> Woendag <br>
-            <input type="checkbox" name="speeldag4" value="slotdonderdag"> Donderdag <br>
-            <input type="checkbox" name="speeldag5" value="slotvrijdag"> Vrijdag <br>
         </label>
         <label>
             Kies speeltijd
             <input type="checkbox" name="speeltijd1" value="1700"> 17:00 uur <br>
-            <input type="checkbox" name="speeltijd2" value="1800"> 18:00 uur <br>
-            <input type="checkbox" name="speeltijd3" value="1900"> 19:00 uur <br>
-            <input type="checkbox" name="speeltijd4" value="2000"> 20:00 uur <br>
         </label>
         <label>
             Voeg plaatjes toe
